--- a/public/404.html
+++ b/public/404.html
@@ -11,11 +11,11 @@
 <meta property="og:description" content="What does this even do?" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="/404.html" />
-<meta property="og:image" content="/pexels-photo-617278.jpg"/>
+<meta property="og:image" content="/"/>
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="/pexels-photo-617278.jpg"/>
+<meta name="twitter:image" content="/"/>
 
 <meta name="twitter:title" content="404 Page not found"/>
 <meta name="twitter:description" content="What does this even do?"/>
