--- a/public/index.html
+++ b/public/index.html
@@ -394,7 +394,7 @@ Save it somewhere specific as we will be using it in the next step.</p>
     <footer>
         <h6>Copyright © 2019 - Test Blog Kiera |
             Rendered by <a href="https://gohugo.io" title="Hugo">Hugo</a> |
-            <a href="/index.xml">Subscribe </a></h6>
+            <a href="/index.xml"> </a></h6>
     </footer>
 </div>
 <script src="/js/scripts.js"></script>
